x11: Sync frame extents in X11 native pixels

Frame extents are written out over the wire they should be in X11 native
pixels.

i.e if we are using 200% scaling, and have X11 clients scale themselves
then from the point of view of the client reading the properties the
window decorations are twice the size as normal.

BUG: 471132


(cherry picked from commit d8029e461ee115ac339f3d7b2062f01ec9c46c40)